--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
             <p>Aspiring Front-End Developer Data Science Learner</p>
             <div class="socials">
                 <a href="https://www.linkedin.com/in/account" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/account" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Maxsun011" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://x.com/mspytho" target="_blank" title="X/Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://website.com" target="_blank" title="Website"><i class="fas fa-globe"></i></a>
+                <a href="https://maxsun011.github.io/" target="_blank" title="Website"><i class="fas fa-globe"></i></a>
                 <a href="mailto:mostafasobh955@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="content">
             <section id="about">
                 <h2><i class="fas fa-info-circle"></i> About me</h2>
-                <p>Hello! My name is Mostafa Subhani, And i'm from Herat, Afghanistan.<br>I am a beginner front-end developer who is continuously working on improving my skills. In addition, I am interested in the field of Data Science and am currently learning related topics.
+                <p>Hello! My name is Mostafa Subhani.<br>I am a beginner front-end developer who is continuously working on improving my skills. In addition, I am interested in the field of Data Science and am currently learning related topics.
                     My goal is to strengthen my skills so that in the future, I can work on projects related to them.</p>
             </section>
 
